Fixed artist name and image wrapping issues between different screen sizes

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -54,10 +54,27 @@
     }
 
     span.bot {
-      font-size: 3.5vw;
+      font-size: 3em;
       color: #aaa;
       font-family: sans-serif;
       font-weight: 300;
+    }
+    @media only screen and (max-width: 700px) and (min-width: 480px){
+      span.name {
+        font-size: 3em;
+      }
+      span.bot {
+        font-size: 2.5em;
+      }
+    }
+
+     @media only screen and (max-width: 480px) {
+      span.name {
+        font-size: 2em;
+      }
+      span.bot {
+        font-size: 1.5em;
+      }
     }
 
     img {
@@ -65,7 +82,7 @@
       display: block;
       border-radius: 50%;
       display: inline-block;
-      margin-right: 35px;
+      margin-right: 25px;
       margin-top: -30px;
     }
   }
